<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

<group android:checkableBehavior="single">
    <item android:title="@string/monster_menu_title">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_large_monsters"
                    android:icon="@drawable/lrg_mon_menu"
                    android:title="@string/large_monsters_title" />
                <item
                    android:id="@+id/nav_small_monsters"
                    android:icon="@drawable/small_mon_icon"
                    android:title="@string/small_monsters_title" />
            </group>
        </menu>
    </item>

    <item android:title="@string/weapons_armors_charms_title">
        <menu>
            <group>
            <item
                android:id="@+id/nav_weapons"
                android:icon="@drawable/sword_menu"
                android:title="@string/weapons_title" />
            <item
                android:id="@+id/nav_armors"
                android:icon="@drawable/armor_menu"
                android:title="@string/armors_title"/>
            <item
                android:id="@+id/nav_charms"
                android:icon="@drawable/charms_menu"
                android:title="@string/charms_title" />
            </group>
        </menu>
    </item>

    <item android:title="@string/palico_gear_title"
            android:icon="@drawable/palico_menu">
        <menu>
            <group>
                <item
                    android:id="@+id/palico_weps"
                    android:title="Palico Weapons"
                    android:icon="@drawable/palico_sword_icon" />
                <item
                    android:id="@+id/palico_helms"
                    android:title="Palico Helms"
                    android:icon="@drawable/palico_head_gear_icon" />
                <item
                    android:id="@+id/palico_armor"
                    android:title="Palico Armor"
                    android:icon="@drawable/palico_chest_armor_icon" />
                <item
                    android:id="@+id/palico_gadgets"
                    android:title="Palico Gadgets"
                    android:icon="@drawable/palico_gadgets_icon_mhw" />

            </group>
        </menu>
    </item>

    <item android:title="@string/items_title">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_items"
                    android:icon="@drawable/items_menu"
                    android:title="@string/items_title" />
            </group>
        </menu>
    </item>
</group>
</menu>
